Archive2/34/fd2f25bdd839a4/output
main.cpp:25:15: error: unknown type name 'FT'
    template <FT function>
              ^
main.cpp:26:29: error: unknown type name 'FT'
    DynamicFunctionDispatch(FT f) {
                            ^
2 errors generated.
